# prediction_c

./: README.md  conf.py  documentation.md  evaluate_submissions.py  index.rst  pyproject.toml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
submissions/views_bootstrap/: submission_details.yml
submissions/views_poisson/: submission_details.yml
submissions/views_poisson/pgm/test_window_2020/eval/: crps_per_month.parquet  crps_per_unit.parquet  ign_per_month.parquet  ign_per_unit.parquet  mis_per_month.parquet  mis_per_unit.parquet
